force-app/main/default/objects/Artl_ReliesOnValidations__mdt/Artl_ReliesOnValidations__mdt.object-meta.xml
<CustomObject>
    <label>Artl ReliesOnValidation</label>
    <pluralLabel>ReliesOnValidations</pluralLabel>
</CustomObject>