force-app/main/default/objects/Artl_ReliesOnValidations__mdt/fields/AttributeJson__c.field-meta.xml
<CustomField>
    <fullName>AttributeJson__c</fullName>
    <label>Attribute Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>