force-app/main/default/objects/Artl_ReliesOnValidations__mdt/fields/FieldJson__c.field-meta.xml
<CustomField>
    <fullName>FieldJson__c</fullName>
    <label>Field Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>