force-app/main/default/objects/Artl_ReliesOnValidations__mdt/fields/Root_Source_Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Root_Source_Target_Product__c</fullName>
    <label>Root Source Target Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>