force-app/main/default/objects/Artl_ReliesOnValidations__mdt/fields/Source_Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Source_Target_Product__c</fullName>
    <label>Source Target Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>